Rules refactoring with Java generics